<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joe.intentlauncher.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >

            <EditText
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title_hint"
                />

            <EditText
                android:id="@+id/message_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/message_hint"
                />
            <CheckBox
                android:id="@+id/only_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_checkbox"
                />

            <Button
                android:id="@+id/send_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_email_button"
                android:layout_weight="1"
                android:onClick="sendEmail"
                style="@style/ButtonStyle"
                />
            <Button
                android:id="@+id/launch_activity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/launch_activity_button"
                android:layout_weight="1"
                android:onClick="launchActivity"
                style="@style/ButtonStyle"
                />
            <Button
                android:id="@+id/launch_camera_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/launch_camera_button"
                android:layout_weight="1"
                android:onClick="startCamera"
                style="@style/ButtonStyle"
                />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
